# SENU

./: .gitignore  LICENSE  PROGRESS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  bridge.ts  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dialog_commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/vault/: mod.rs
